--- a/main.html
+++ b/main.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="left-section">
+      <img src="your-photo.jpg" alt="Profile Photo" class="profile-img">
+
+      <div class="info">
+        <h2>Name</h2>
+        <p>Shubham Bhola</p>
+
+        <h2>Profile</h2>
+        <p>Software Developer</p>
+
+        <h2>Email</h2>
+        <p>abcdef796@gmail.com</p>
+      </div>
+
+      <div class="skills">
+        <h2>Skills</h2>
+
+        <div class="skill">
+          <div class="label">
+            <i class="fab fa-react"></i> React &nbsp;
+            <i class="fab fa-css3-alt"></i> CSS &nbsp;
+            <i class="fab fa-js-square"></i> JavaScript
+          </div>
+          <div class="bar"><div class="fill" style="width:95%"></div></div>
+          <span>95%</span>
+        </div>
+
+        <div class="skill">
+          <div class="label">
+            <i class="fab fa-node"></i> NodeJS &nbsp;
+            <i class="fas fa-database"></i> MongoDB
+          </div>
+          <div class="bar"><div class="fill" style="width:90%"></div></div>
+          <span>90%</span>
+        </div>
+
+        <div class="skill">
+          <div class="label">
+            <i class="fas fa-code"></i> C/C++ &nbsp;
+            <i class="fab fa-python"></i> Python &nbsp;
+            <i class="fas fa-terminal"></i> Batch
+          </div>
+          <div class="bar"><div class="fill" style="width:99%"></div></div>
+          <span>99%</span>
+        </div>
+
+        <div class="skill">
+          <div class="label">
+            <i class="fab fa-aws"></i> AWS &nbsp;
+            <i class="fas fa-elephant"></i> Hadoop
+          </div>
+          <div class="bar"><div class="fill" style="width:93%"></div></div>
+          <span>93%</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="right-section">
+      <h2>About me</h2>
+      <p>
+        I am a Self-starter with a passion to adapt and evangelise new technologies.
+        I have a passion for software development with a diverse skillset ranging from
+        the MERN stack to a stronghold on data structures and algorithms.
+        I like to tackle complex challenges head-on to deliver technically sound solutions
+        with optimum efficiency.
+      </p>
+
+      <p>
+        I believe that magic is possible with a blend of imagination, hard-work, and passion.
+        Most of all, I believe in determination and honest efforts to enhance my skills in
+        order to contribute to the growth of society.
+      </p>
+    </div>
+  </div>
+</body>
+</html>
 
